WIP: Implement grouping of on-board accesses by round